--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ int main() {
                         </div>
                         <div class="stat-card glass-card">
                             <i class="fas fa-shield-alt"></i>
-                            <h3>Security</h3>
+                            <h3>Cyber Security</h3>
                             <p>Cyber Security Enthusiast</p>
                         </div>
                     </div>
