--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ int main() {
                         <div class="stat-card glass-card">
                             <i class="fas fa-shield-alt"></i>
                             <h3>Cyber Security</h3>
-                            <p>Cyber Security Enthusiast</p>
+                            <p>Student @ Siber Vatan</p>
                         </div>
                     </div>
                 </div>
