--- a/index.html
+++ b/index.html
@@ -155,13 +155,14 @@ int main() {
             <h2 class="section-title">Yetenekler & Sertifikalar</h2>
             <div class="skills-wrapper">
                 <div class="skill-category">
-                    <h3>Teknik Yetenekler (10)</h3>
+                    <h3>Teknik Yetenekler (11)</h3>
                     <div class="tags">
                         <span class="tag">Siber Güvenlik</span>
                         <span class="tag">Linux</span>
                         <span class="tag">C,C#,C++</span>
                         <span class="tag">Python</span>
                         <span class="tag">Javascript</span>
+                        <span class="tag">Typescript</span>
                         <span class="tag">HTML</span>
                         <span class="tag">CSS</span>
                         <span class="tag">Node.js</span>
