--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ int main() {
                         <span class="tag">Linux</span>
                         <span class="tag">C,C#,C++</span>
                         <span class="tag">Python</span>
-                        <span class="tag">Javascript, Typescript</span>
+                        <span class="tag">Javascript</span>
                         <span class="tag">HTML</span>
                         <span class="tag">CSS</span>
                         <span class="tag">Node.js</span>
